--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">TaskerNative</string>
     <string name="action_settings">Settings</string>
+    <string name="add_task_activity_title">Task Constructor</string>
+    <string name="add_new_task">Add new task</string>
 </resources>
