Working without authentication

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,11 @@
     <string name="action_settings">Settings</string>
     <string name="add_task_activity_title">Task Constructor</string>
     <string name="add_new_task">Add new task</string>
+    <string name="input_title">Input title</string>
+    <string name="input_description">Input description</string>
+    <string name="send">Send</string>
+    <string name="task_details_title">Task Details</string>
+    <string name="task_id">Task Id:</string>
+    <string name="title">Title:</string>
+    <string name="description">Description:</string>
 </resources>
